// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should LoginForm render correctly Should LoginForm render correctly error 1`] = `
<form
  action="#"
  className="login__form form"
  method="post"
  onSubmit={[Function]}
>
  <div
    className="login__input-wrapper form__input-wrapper"
  >
    <label
      className="visually-hidden"
    >
      E-mail
    </label>
    <input
      className="login__input form__input"
      disabled={false}
      name="email"
      placeholder="Email"
      required=""
      type="email"
    />
  </div>
  <div
    className="login__input-wrapper form__input-wrapper"
  >
    <label
      className="visually-hidden"
    >
      Password
    </label>
    <input
      className="login__input form__input"
      disabled={false}
      name="password"
      placeholder="Password"
      required=""
      type="password"
    />
  </div>
  <button
    className="login__submit form__submit button"
    disabled={false}
    type="submit"
  >
    Sign in
  </button>
</form>
`;

exports[`Should LoginForm render correctly Should LoginForm render correctly no auth 1`] = `
<form
  action="#"
  className="login__form form"
  method="post"
  onSubmit={[Function]}
>
  <div
    className="login__input-wrapper form__input-wrapper"
  >
    <label
      className="visually-hidden"
    >
      E-mail
    </label>
    <input
      className="login__input form__input"
      disabled={false}
      name="email"
      placeholder="Email"
      required=""
      type="email"
    />
  </div>
  <div
    className="login__input-wrapper form__input-wrapper"
  >
    <label
      className="visually-hidden"
    >
      Password
    </label>
    <input
      className="login__input form__input"
      disabled={false}
      name="password"
      placeholder="Password"
      required=""
      type="password"
    />
  </div>
  <button
    className="login__submit form__submit button"
    disabled={false}
    type="submit"
  >
    Sign in
  </button>
</form>
`;

exports[`Should LoginForm render correctly Should LoginForm render correctly responce 1`] = `
<form
  action="#"
  className="login__form form"
  method="post"
  onSubmit={[Function]}
>
  <div
    className="login__input-wrapper form__input-wrapper"
  >
    <label
      className="visually-hidden"
    >
      E-mail
    </label>
    <input
      className="login__input form__input"
      disabled={true}
      name="email"
      placeholder="Email"
      required=""
      type="email"
    />
  </div>
  <div
    className="login__input-wrapper form__input-wrapper"
  >
    <label
      className="visually-hidden"
    >
      Password
    </label>
    <input
      className="login__input form__input"
      disabled={true}
      name="password"
      placeholder="Password"
      required=""
      type="password"
    />
  </div>
  <button
    className="login__submit form__submit button"
    disabled={true}
    type="submit"
  >
    Sign in
  </button>
</form>
`;
